# sxkbd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README  README.md  compile_commands.json
extra/: tinyusb.diff
src/: board.h  hid.c  hid.h  keycode.h  keymap.c  keymap.h  keymat.c  keymat.h  keysym.h  keysym_de.h  keysym_us.h  led.c  led.h  main.c  matrix.c  matrix.h  neopix.c  neopix.h  split.c  split.h  tusb_config.h  uart_rx.pio  uart_tx.pio  usb_descriptors.c  usb_stdio.c  usb_stdio.h  util.c  util.h  ws2812.c  ws2812.h  ws2812.pio  ws2812.pio.h
src/hid/: consumer.h  keyboard.h  system.h
src/keysym/: consumer.c  consumer.h  keyboard_de.h  keyboard_us.h  mouse.h  system.c  system.h
